upload_image and read from db

--- a/app/src/main/res/layout/recipe_list_row.xml
+++ b/app/src/main/res/layout/recipe_list_row.xml
@@ -9,8 +9,7 @@
         android:id="@+id/recipe_image_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/man" />
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/recipe_name_text_view"
