--- a/app/src/main/res/layout/recipe_list_row.xml
+++ b/app/src/main/res/layout/recipe_list_row.xml
@@ -1,9 +1,8 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/recipe_image_view"
@@ -13,23 +12,23 @@
 
     <TextView
         android:id="@+id/recipe_name_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Recipe Name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:paddingTop="8dp" />
+        android:textSize="18sp"
+        android:paddingTop="8dp"
+        android:text="Recipe Name" />
 
     <TextView
         android:id="@+id/recipe_description_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Description"
-        android:paddingTop="4dp" />
+        android:textSize="14sp"
+        android:text="Description" />
 
     <RatingBar
         android:id="@+id/recipe_rating_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:rating="4.0"
-        android:paddingTop="8dp" />
+        android:numStars="5"
+        android:rating="0" />
 </LinearLayout>
