--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -78,6 +78,7 @@
                 android:textColor="@color/white"
                 android:layout_marginBottom="16dp"/>
 
+
             <!-- Save Button -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/save_button"
@@ -86,6 +87,24 @@
                 android:text="Save Changes"
                 android:backgroundTint="@color/primary_red"
                 android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/user_recipes_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="My Recipes"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="8dp"/>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/user_recipes_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
